--- a/Alpha/AlphaMvc/Content/Style2.css
+++ b/Alpha/AlphaMvc/Content/Style2.css
@@ -351,7 +351,9 @@ select{
     width: 20%;
 }
 /*--------------------------------------------------------------------------------------------*/
-
+.linkstyle{
+    margin-bottom:10px;
+}
 .form-style-1 {
     /*max-width: 400px;*/
     width: 40%;
