--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -18,11 +18,11 @@
         <script src="@Url.Content("~/Scripts/modernizr-2.0.6-development-only.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/AjaxLogin.js")" type="text/javascript"></script>
 
-        @*<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+        @*<script src="~/Scripts/jquery-1.10.2.min.js"></script>*@
         <link href="~/Content/bootstrap.css" rel="stylesheet" />
         <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
         <script src="~/Scripts/bootstrap.js"></script>
-        <script src="~/Scripts/bootstrap.min.js"></script>*@
+        <script src="~/Scripts/bootstrap.min.js"></script>
 
         @* ---------------------------- menu -------------------------- *@
         <script language="javascript" type="text/javascript">
