--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -5,73 +5,19 @@
 <h2>
     JobOrder Create
 </h2>
+@* =============== dialog *@
 <link href="@Url.Content("~/Content/Dialog/dialogstyle.css")" rel="stylesheet" type="text/css" />
-
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<link href="@Url.Content("~/Content/jquery.dataTables.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/css/buttons.jqueryui.min.css")" rel="stylesheet" type="text/css" />
-<script src="@Url.Content("https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.html5.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.print.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.colVis.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.dataTables.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/1.10.13/js/dataTables.jqueryui.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/dataTables.buttons.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.jqueryui.min.js")" type="text/javascript"></script>
-
+@* =============== Tab *@
 <link href="@Url.Content("~/Content/Tab/easy-responsive-tabs.css")" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/Tab/easyResponsiveTabs.js")" type="text/javascript"></script>
-@* ----------------------------------------- dynotable ---------------------------------------- *@
+@* =============== Dynamictable *@
 <link href="@Url.Content("~/Content/editable/tablestyle.css")" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="http://yandex.st/highlightjs/6.2/highlight.min.js"></script>
 <script src="@Url.Content("~/Scripts/EditableGrid/jquery.dynotable.js")" type="text/javascript"></script>
-@* ----------------------------------------- dynotable ---------------------------------------- *@
+@* =============== timepicker *@
 <link href="@Url.Content("~/Content/timepicker/wickedpicker.css")" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/timepicker/wickedpicker.js")" type="text/javascript"></script>
-@* ----------------------------------------- timepicker ---------------------------------------- *@
-<script>
-    hljs.tabReplace = '    '; // 4 spaces
-    hljs.initHighlightingOnLoad();
-
-  $( function() {
-      $("#customerDialog").dialog({
-      scroll: true,
-      height: "auto",
-      width: 550,
-      paging: true,
-      modal: true,
-      autoOpen: false,
-      show: {
-        effect: "blind",
-        duration: 1000
-      },
-      hide: {
-        effect: "explode",
-        duration: 1000
-      }
-    });
-
-    $( "#opener" ).on( "click", function() {
-      $( "#customerDialog" ).dialog( "open" );
-    });
-
-    $("#datepicker").datepicker();
-    $("#datepicker2").datepicker();
-    $("#datepicker3").datepicker();
-    $("#datepicker4").datepicker();
-    $("#datepicker5").datepicker();
-    $('#t1').dynoTable();
-    $('#t2').dynoTable2();
-    $('#t3').dynoTable3();
-    $('#t4').dynoTable4();
-    $('#t5').dynoTable5();
-    $('#t6').dynoTable6();
-    $('#t7').dynoTable7();
-  } );
-</script>
 <div id="customerDialog" title="ลูกค้า" class="dialogstyle">
     <div class="DialogDiv">
         <table id="tblCustomer" class="display" cellspacing="0">
@@ -819,7 +765,7 @@
                                         <div class="clr"></div>
                                     </div>
                                     <div>
-                                        <a href="@Url.Action("Create", "Borrow")" class="alink"><img src="@Url.Content("~/Images/btnadd.png")" class="btnimage-4" /></a>
+                                        <a href="@Url.Action("CreateBorrow", "Borrow")" class="alink"><img src="@Url.Content("~/Images/btnadd.png")" class="btnimage-4" /></a>
                                         <div class="grigbar">
                                             <table id="example" class="display" cellspacing="0">
                                                 <thead>
@@ -856,7 +802,7 @@
                                                         <td class="hideANDseek"></td>
                                                         <td class="hideANDseek"></td>
                                                         <td>
-                                                            <a href="@Url.Action("Edit", "Borrow")">
+                                                            <a href="@Url.Action("EditBorrow", "Borrow")">
                                                                 <img src="@Url.Content("~/Images/edit.png")" />
                                                             </a>
                                                             <a href="@Url.Action("Delete", "Trachnician")">
@@ -878,7 +824,7 @@
                                                         <td class="hideANDseek">1</td>
                                                         <td class="hideANDseek"></td>
                                                         <td>
-                                                            <a href="@Url.Action("Edit", "Borrow")">
+                                                            <a href="@Url.Action("EditBorrow", "Borrow")">
                                                                 <img src="@Url.Content("~/Images/edit.png")" />
                                                             </a>
                                                             <a href="@Url.Action("Delete", "Trachnician")">
@@ -900,7 +846,7 @@
                                                         <td class="hideANDseek"></td>
                                                         <td class="hideANDseek"></td>
                                                         <td>
-                                                            <a href="@Url.Action("Edit", "Borrow")">
+                                                            <a href="@Url.Action("EditBorrow", "Borrow")">
                                                                 <img src="@Url.Content("~/Images/edit.png")" />
                                                             </a>
                                                             <a href="@Url.Action("Delete", "Trachnician")">
@@ -931,6 +877,49 @@
 
 
 <script type="text/javascript">
+    //------------------ Standard --------------------------
+    hljs.tabReplace = '    '; // 4 spaces
+    hljs.initHighlightingOnLoad();
+
+    $(function () {
+        $("#customerDialog").dialog({
+            scroll: true,
+            height: "auto",
+            width: 550,
+            paging: true,
+            modal: true,
+            autoOpen: false,
+            show: {
+                effect: "blind",
+                duration: 1000
+            },
+            hide: {
+                effect: "explode",
+                duration: 1000
+            }
+        });
+
+        $("#opener").on("click", function () {
+            $("#customerDialog").dialog("open");
+        });
+
+        $("#datepicker").datepicker();
+        $("#datepicker2").datepicker();
+        $("#datepicker3").datepicker();
+        $("#datepicker4").datepicker();
+        $("#datepicker5").datepicker();
+        $('#t1').dynoTable();
+        $('#t2').dynoTable2();
+        $('#t3').dynoTable3();
+        $('#t4').dynoTable4();
+        $('#t5').dynoTable5();
+        $('#t6').dynoTable6();
+        $('#t7').dynoTable7();
+
+        var dates = new Date();
+        $('.timepicker').wickedpicker({ defaultValue: dates.getTime(), twentyFour: true, showSeconds: false });
+    });
+    //------------------ Custom --------------------------
     $(document).ready(function () {
         var dataObject = { typeID: '001' };
         $.ajax({
@@ -1004,19 +993,6 @@
                 $info.show();
             }
         });
-
-        var table = $('#example').DataTable({
-            lengthChange: false
-        });
-
-        var table2 = $('#example2').DataTable({
-            lengthChange: false
-            
-        });
-
-        table.buttons().container()
-            .insertBefore('#example_filter');
     });
-    var dates = new Date();
-    $('.timepicker').wickedpicker({ defaultValue: dates.getTime(), twentyFour: true, showSeconds: false });
+   
 </script>
