--- a/Alpha/AlphaMvc/Content/bootstrap.css
+++ b/Alpha/AlphaMvc/Content/bootstrap.css
@@ -311,11 +311,16 @@ html {
 }
 
 body {
+  /*font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.428571429;
+  color: #333333;
+  background-color: #ffffff;*/
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.428571429;
   color: #333333;
-  background-color: #ffffff;
+  background-color: #c20a0a;
 }
 
 input,
