--- a/Alpha/AlphaMvc/Views/Employee/IndexEmployee.cshtml
+++ b/Alpha/AlphaMvc/Views/Employee/IndexEmployee.cshtml
@@ -4,7 +4,7 @@
 
 <h2>Teachnician</h2>
 
-<table id="example" class="display" cellspacing="0">
+<table>
     <thead>
         <tr>
             <th>No.</th>
@@ -27,7 +27,7 @@
             <td>x-xxx-xxxxxx-xx-x</td>
             <td>ช่าง1</td>
             <td>
-                <a href="@Url.Action("Edit", "Employee")">
+                <a href="@Url.Action("EditEmployee", "Employee")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -41,7 +41,7 @@
             <td>x-xxx-xxxxxx-xx-x</td>
             <td>ช่าง2</td>
             <td>
-                <a href="@Url.Action("Edit", "Employee")">
+                <a href="@Url.Action("EditEmployee", "Employee")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -55,7 +55,7 @@
             <td>x-xxx-xxxxxx-xx-x</td>
             <td>ช่าง3</td>
             <td>
-                <a href="@Url.Action("Edit", "Employee")">
+                <a href="@Url.Action("EditEmployee", "Employee")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -69,7 +69,7 @@
             <td>x-xxx-xxxxxx-xx-x</td>
             <td>ช่าง4</td>
             <td>
-                <a href="@Url.Action("Edit", "Employee")">
+                <a href="@Url.Action("EditEmployee", "Employee")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -83,7 +83,7 @@
             <td>x-xxx-xxxxxx-xx-x</td>
             <td>ช่าง5</td>
             <td>
-                <a href="@Url.Action("Edit", "Employee")">
+                <a href="@Url.Action("EditEmployee", "Employee")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -97,7 +97,7 @@
             <td>x-xxx-xxxxxx-xx-x</td>
             <td>ช่าง6</td>
             <td>
-                <a href="@Url.Action("Edit", "Employee")">
+                <a href="@Url.Action("EditEmployee", "Employee")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -111,37 +111,10 @@
             <td>x-xxx-xxxxxx-xx-x</td>
             <td>ช่าง7</td>
             <td>
-                <a href="@Url.Action("Edit", "Employee")">
+                <a href="@Url.Action("EditEmployee", "Employee")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
         </tr>
     </tbody>
 </table>
-@* ------------------------------- grid  -------------------------------*@
-
-<link href="@Url.Content("~/Content/table/jquery-ui.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("~/Content/jquery.dataTables.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/css/buttons.jqueryui.min.css")" rel="stylesheet" type="text/css" />
-<script src="@Url.Content("https://code.jquery.com/jquery-1.12.4.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.html5.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.print.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.colVis.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.dataTables.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/1.10.13/js/dataTables.jqueryui.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/dataTables.buttons.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.jqueryui.min.js")" type="text/javascript"></script>
-<script>
-        $(document).ready(function () {
-            var table = $('#example').DataTable({
-                lengthChange: false,
-                buttons: ['copy', 'excel', 'pdf', 'colvis']
-            });
-
-            table.buttons().container()
-                .insertBefore('#example_filter');
-        });
-</script>
