--- a/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
@@ -3,12 +3,8 @@
 }
 
 <h2>Master Expense</h2>
-<link href="@Url.Content("~/Content/table/jquery-ui.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("~/Content/jquery.dataTables.css")" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
-<link href="@Url.Content("~/Content/editable/datagrid.css")" rel="stylesheet" type="text/css" />
+
 <style>
     .paging-nav {
         text-align: right;
@@ -47,7 +43,6 @@
     </tr>
 </table>
 
-@* ------------------------------- grid  -------------------------------*@
 <table class="barattach-2">
     <tr>
         <td>
@@ -70,11 +65,11 @@
     </table>
 </div>
 
-      @* ------------------------------- grid  -------------------------------*@
 
 <script>
     $(document).ready(function () {
-            //------------------------- Sorting ------------------------
+        //------------------------------------ Standard ------------------------------------
+        //Sorting
             $('#tableData').paging({ limit: 5 });
             $('th').click(function () {
                 var table = $(this).parents('table').eq(0)
@@ -91,7 +86,7 @@
             }
             function getCellValue(row, index) { return $(row).children('td').eq(index).html() }
             
-            //-------------------------filter------------------------
+        //filter
             $("#searchInput").keyup(function () {
                 $("#result").find("tr").hide();
                 var data = this.value.split(" ");
@@ -106,7 +101,8 @@
                 $(this).css({ "color": "black" });
                 $(this).unbind('focus');
             }).css({ "color": "#C0C0C0" });
-            //-------------------------filter------------------------
+
+        //------------------------------------ Custom ------------------------------------
 
             $.ajax(
             {
