--- a/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
@@ -12,13 +12,8 @@
         </td>
     </tr>
 </table>
-<link href="@Url.Content("~/Content/table/jquery-ui.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("~/Content/jquery.dataTables.css")" rel="stylesheet" type="text/css" />
-@*<script src="@Url.Content("https://code.jquery.com/jquery-1.12.4.js")" type="text/javascript"></script>*@
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
 <script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
-<link href="@Url.Content("~/Content/editable/datagrid.css")" rel="stylesheet" type="text/css" />
+
 <style>
     .paging-nav {
         text-align: right;
@@ -48,7 +43,7 @@
     }
 </style>
 
-@*<table id="example" class="display" cellspacing="0">*@
+
 <table class="barattach-2">
     <tr>
         <td>
@@ -71,11 +66,10 @@
     </table>
 </div>
 
-@* ------------------------------- grid  -------------------------------*@
-
 <script>
-        $(document).ready(function () {
-            //------------------------- Sorting ------------------------
+    $(document).ready(function () {
+        //------------------------------------ Standard ------------------------------------
+            //Sorting
             $('th').click(function () {
                 var table = $(this).parents('table').eq(0)
                 var rows = table.find('tr:gt(0)').toArray().sort(comparer($(this).index()))
@@ -90,9 +84,8 @@
                 }
             }
             function getCellValue(row, index) { return $(row).children('td').eq(index).html() }
-            //------------------------- Sorting ------------------------
 
-            //-------------------------filter------------------------
+            //filter
             $("#searchInput").keyup(function () {
                 $("#result").find("tr").hide();
                 var data = this.value.split(" ");
@@ -106,7 +99,8 @@
                 $(this).css({ "color": "black" });
                 $(this).unbind('focus');
             }).css({ "color": "#C0C0C0" });
-            //-------------------------filter------------------------
+
+//------------------------------------ Custom ------------------------------------
 
             $.ajax(
             {
