--- a/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "EditWageTeachnician";
 }
 
 <h2>WageTeachnician Edit</h2>
-
+<script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
 <table>
     <tr>
         <td>
-            @Html.ActionLink("WageTeachnician List", "Index")
+            @Html.ActionLink("WageTeachnician List", "IndexWageTeachnician")
         </td>
     </tr>
 </table>
@@ -26,7 +26,7 @@
             </ul>
 
             <div class="grigbar">
-                <table id="example" class="display" cellspacing="0">
+                <table>
                     <thead>
                         <tr>
                             <th rowspan="3">Customer</th>
@@ -191,43 +191,3 @@
         </form>
     }
 </div>
-
-<link href="@Url.Content("~/Content/table/jquery-ui.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("~/Content/jquery.dataTables.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/css/buttons.jqueryui.min.css")" rel="stylesheet" type="text/css" />
-<script src="@Url.Content("https://code.jquery.com/jquery-1.12.4.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.html5.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.print.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.colVis.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.dataTables.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/1.10.13/js/dataTables.jqueryui.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/dataTables.buttons.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.jqueryui.min.js")" type="text/javascript"></script>
-@*<script src="@Url.Content("~/Scripts/grid.js")" type="text/javascript"></script>*@
-<script>
-    $(document).ready(function () {
-
-
-        var table = $('#example').DataTable({
-            "searching": false,
-            lengthChange: false
-        });
-
-
-        table.buttons().container()
-            .insertBefore('#example_filter');
-    });
-</script>
-@{
-
-            if (ViewData["result"] != "" && ViewData["result"] != null)
-            {
-                ViewData["result"] = null;
-        <script type="text/javascript" language="javascript">
-                    alert("Data saved Successfully");
-        </script>
-    }
-}
