--- a/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/IndexWageTeachnician.cshtml
@@ -1,10 +1,11 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "IndexWageTeachnician";
 }
 
 <h2>WageTechnician</h2>
+<script src="@Url.Content("~/Scripts/EditableGrid/paging.js")" type="text/javascript"></script>
 
-<table id="example" class="display" cellspacing="0">
+<table>
     <thead>
         <tr>
             <th>No.</th>
@@ -27,7 +28,7 @@
             <td>ช่าง1</td>
             <td class="hideANDseek">D</td>
             <td>
-                <a href="@Url.Action("Edit", "WageTeachnician")">
+                <a href="@Url.Action("EditWageTeachnician", "WageTeachnician")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -41,7 +42,7 @@
             <td>ช่าง1</td>
             <td class="hideANDseek">D</td>
             <td>
-                <a href="@Url.Action("Edit", "WageTeachnician")">
+                <a href="@Url.Action("EditWageTeachnician", "WageTeachnician")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -55,7 +56,7 @@
             <td>ช่าง3</td>
             <td class="hideANDseek">B</td>
             <td>
-                <a href="@Url.Action("Edit", "WageTeachnician")">
+                <a href="@Url.Action("EditWageTeachnician", "WageTeachnician")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -69,7 +70,7 @@
             <td>ช่าง4</td>
             <td class="hideANDseek">A</td>
             <td>
-                <a href="@Url.Action("Edit", "WageTeachnician")">
+                <a href="@Url.Action("EditWageTeachnician", "WageTeachnician")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -83,7 +84,7 @@
             <td>ช่าง2</td>
             <td class="hideANDseek">C</td>
             <td>
-                <a href="@Url.Action("Edit", "WageTeachnician")">
+                <a href="@Url.Action("EditWageTeachnician", "WageTeachnician")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -97,7 +98,7 @@
             <td>ช่าง2</td>
             <td class="hideANDseek">C</td>
             <td>
-                <a href="@Url.Action("Edit", "WageTeachnician")">
+                <a href="@Url.Action("EditWageTeachnician", "WageTeachnician")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -111,37 +112,10 @@
             <td>ช่าง3</td>
             <td class="hideANDseek">B</td>
             <td>
-                <a href="@Url.Action("Edit", "WageTeachnician")">
+                <a href="@Url.Action("EditWageTeachnician", "WageTeachnician")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
         </tr>
     </tbody>
 </table>
-@* ------------------------------- grid  -------------------------------*@
-
-<link href="@Url.Content("~/Content/table/jquery-ui.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("~/Content/jquery.dataTables.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/css/buttons.jqueryui.min.css")" rel="stylesheet" type="text/css" />
-<script src="@Url.Content("https://code.jquery.com/jquery-1.12.4.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.html5.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.print.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.colVis.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.dataTables.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/1.10.13/js/dataTables.jqueryui.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/dataTables.buttons.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.jqueryui.min.js")" type="text/javascript"></script>
-<script>
-        $(document).ready(function () {
-            var table = $('#example').DataTable({
-                lengthChange: false,
-                buttons: ['copy', 'excel', 'pdf', 'colvis']
-            });
-
-            table.buttons().container()
-                .insertBefore('#example_filter');
-        });
-</script>
