--- a/Alpha/AlphaMvc/Views/WageVendor/EditWageVendor.cshtml
+++ b/Alpha/AlphaMvc/Views/WageVendor/EditWageVendor.cshtml
@@ -1,22 +1,13 @@
 ﻿@{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "EditWageVendor";
 }
 <div class="myDesktop">
     <h2>WageVendor Edit</h2>
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
-    <script>
-        $(document).ready(function () {
-
-            $("#datepicker").datepicker();
-        });
-    </script>
-
+  
     <table>
         <tr>
             <td>
-                @Html.ActionLink("WageVendor List", "Index")
+                @Html.ActionLink("WageVendor List", "IndexWageVendor")
             </td>
         </tr>
     </table>
@@ -206,43 +197,4 @@
         }
     </div>
 </div>
-<link href="@Url.Content("~/Content/table/jquery-ui.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("~/Content/jquery.dataTables.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/css/buttons.jqueryui.min.css")" rel="stylesheet" type="text/css" />
-<script src="@Url.Content("https://code.jquery.com/jquery-1.12.4.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.html5.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.print.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.colVis.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.dataTables.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/1.10.13/js/dataTables.jqueryui.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/dataTables.buttons.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.jqueryui.min.js")" type="text/javascript"></script>
 
-<script>
-    $(document).ready(function () {
-
-        var table = $('#example').DataTable({
-            "searching": false,
-            "scrollX": 100,
-            "scrollX": true,
-            "jQueryUI": true,
-            lengthChange: false
-        });
-
-        table.buttons().container()
-            .insertBefore('#example_filter');
-    });
-</script>
-@{
-
-            if (ViewData["result"] != "" && ViewData["result"] != null)
-            {
-                ViewData["result"] = null;
-        <script type="text/javascript" language="javascript">
-                    alert("Data saved Successfully");
-        </script>
-    }
-}
