--- a/Alpha/AlphaMvc/Views/WageVendor/IndexWageVendor.cshtml
+++ b/Alpha/AlphaMvc/Views/WageVendor/IndexWageVendor.cshtml
@@ -1,10 +1,10 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "IndexWageVendor";
 }
 
 <h2>WageVendor</h2>
 
-<table id="example" class="display" cellspacing="0">
+<table>
     <thead>
         <tr>
             <th>No.</th>
@@ -23,7 +23,7 @@
             <td>ที่อยู่1</td>
             <td>09x-xxx-xxxx</td>
             <td>
-                <a href="@Url.Action("Edit", "WageVendor")">
+                <a href="@Url.Action("EditWageVendor", "WageVendor")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -35,7 +35,7 @@
             <td>ที่อยู่2</td>
             <td>09x-xxx-xxxx</td>
             <td>
-                <a href="@Url.Action("Edit", "WageVendor")">
+                <a href="@Url.Action("EditWageVendor", "WageVendor")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -47,7 +47,7 @@
             <td>ที่อยู่3</td>
             <td>09x-xxx-xxxx</td>
             <td>
-                <a href="@Url.Action("Edit", "WageVendor")">
+                <a href="@Url.Action("EditWageVendor", "WageVendor")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -59,7 +59,7 @@
             <td>ที่อยู่4</td>
             <td>09x-xxx-xxxx</td>
             <td>
-                <a href="@Url.Action("Edit", "WageVendor")">
+                <a href="@Url.Action("EditWageVendor", "WageVendor")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -71,7 +71,7 @@
             <td>ที่อยู่5</td>
             <td>09x-xxx-xxxx</td>
             <td>
-                <a href="@Url.Action("Edit", "WageVendor")">
+                <a href="@Url.Action("EditWageVendor", "WageVendor")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -83,7 +83,7 @@
             <td>ที่อยู่6</td>
             <td>09x-xxx-xxxx</td>
             <td>
-                <a href="@Url.Action("Edit", "WageVendor")">
+                <a href="@Url.Action("EditWageVendor", "WageVendor")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
@@ -95,37 +95,10 @@
             <td>ที่อยู่7</td>
             <td>09x-xxx-xxxx</td>
             <td>
-                <a href="@Url.Action("Edit", "WageVendor")">
+                <a href="@Url.Action("EditWageVendor", "WageVendor")">
                     <img src="@Url.Content("~/Images/view.png")" />
                 </a>
             </td>
         </tr>
     </tbody>
 </table>
-@* ------------------------------- grid  -------------------------------*@
-
-<link href="@Url.Content("~/Content/table/jquery-ui.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("~/Content/jquery.dataTables.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/css/buttons.jqueryui.min.css")" rel="stylesheet" type="text/css" />
-<script src="@Url.Content("https://code.jquery.com/jquery-1.12.4.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdnjs.cloudflare.com/ajax/libs/jszip/2.5.0/jszip.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/pdfmake.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.rawgit.com/bpampuch/pdfmake/0.1.18/build/vfs_fonts.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.html5.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.print.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.colVis.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.dataTables.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/1.10.13/js/dataTables.jqueryui.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/dataTables.buttons.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("https://cdn.datatables.net/buttons/1.2.3/js/buttons.jqueryui.min.js")" type="text/javascript"></script>
-<script>
-        $(document).ready(function () {
-            var table = $('#example').DataTable({
-                lengthChange: false,
-                buttons: ['copy', 'excel', 'pdf', 'colvis']
-            });
-
-            table.buttons().container()
-                .insertBefore('#example_filter');
-        });
-</script>
