--- a/Alpha/AlphaMvc/Content/jquery-ui.css
+++ b/Alpha/AlphaMvc/Content/jquery-ui.css
@@ -844,9 +844,9 @@ body .ui-tooltip {
 	font-size: 1em;
 }
 .ui-widget-content {
-	border: 1px solid #aaaaaa;
-	background: #ffffff url("images/ui-bg_flat_75_ffffff_40x100.png") 50% 50% repeat-x;
-	color: #222222;
+    border: 1px solid #aaaaaa;
+    background: #ffffff url("../Images/ui-bg_flat_75_ffffff_40x100.png") 50% 50% repeat-x;
+    color: #222222;
 }
 .ui-widget-content a {
 	color: #222222;
