--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -7,8 +7,10 @@
         <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/Style.css")" rel="stylesheet" type="text/css" />
         <link href="@Url.Content("~/Content/themes/base/jquery.ui.all.css")" rel="stylesheet" type="text/css" />
+        <link href="@Url.Content("~/Content/jquery-ui.css")" rel="stylesheet" type="text/css" />
 
-        <script src="@Url.Content("~/Scripts/jquery-1.10.2.min.js")" type="text/javascript"></script>
+        @*<script src="@Url.Content("~/Scripts/jquery-1.10.2.min.js")" type="text/javascript"></script>*@
+        <script src="@Url.Content("~/Scripts/jquery-1.12.4.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/bootstrap.js")" type="text/javascript"></script>
         <script src="@Url.Content("~/Scripts/bootstrap.min.js")" type="text/javascript"></script>
 
