--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -18,22 +18,21 @@
 @* =============== timepicker *@
 <link href="@Url.Content("~/Content/timepicker/wickedpicker.css")" rel="stylesheet" type="text/css" />
 <script src="@Url.Content("~/Scripts/timepicker/wickedpicker.js")" type="text/javascript"></script>
+
 <div id="customerDialog" title="ลูกค้า" class="dialogstyle">
-    <div class="DialogDiv">
-        <table id="tblCustomer" class="display" cellspacing="0">
-            <thead>
-                <tr>
-                    <th>No.</th>
-                    <th>ลูกค้า</th>
-                    <th>เบอร์โทร</th>
-                    <th>บุคคลติดต่อ</th>
-                </tr>
-            </thead>
-            <tbody>
-                
-            </tbody>
-        </table>
-    </div>
+    <table id="tblCustomer">
+        <thead>
+            <tr>
+                <th>No.</th>
+                <th>รหัสลูกค้า</th>
+                <th>ลูกค้า</th>
+                <th>เบอร์โทร</th>
+                <th>บุคคลติดต่อ</th>
+            </tr>
+        </thead>
+        <tbody id="customerBody">
+        </tbody>
+    </table>
 </div>
 
 <div id="myModal">
@@ -79,9 +78,10 @@
 
                 <li>
                     <label>ลูกค้า</label>
-                    <input type="text" name="field1" class="field-divided" placeholder="ลูกค้า/บริษัท" disabled />&nbsp;<a href="#" id="opener">
+                    <input type="text" id="txtCustomerName" class="field-divided" placeholder="ลูกค้า/บริษัท" disabled />&nbsp;<a href="#" id="opener">
                         <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" />
                     </a>
+                    <input type="hidden" id="hidCustID" />
                 </li>
                 <li>
                     <input type="text" name="field2" class="field-divided" placeholder="โทรศัพท์" disabled />&nbsp;<input type="text" name="field1" class="field-divided" placeholder="แฟกซ์" disabled />
@@ -874,8 +874,6 @@
     }
 </div>
 
-
-
 <script type="text/javascript">
     //------------------ Standard --------------------------
     hljs.tabReplace = '    '; // 4 spaces
@@ -919,8 +917,14 @@
         var dates = new Date();
         $('.timepicker').wickedpicker({ defaultValue: dates.getTime(), twentyFour: true, showSeconds: false });
     });
+
     //------------------ Custom --------------------------
     $(document).ready(function () {
+        $("#customerBody").on("click", "tr", function (e) {
+            $("#txtCustomerName").val($(this).find("td:eq(3)").text());
+            $("#hidCustID").val($(this).find("td:eq(1)").text());
+        })
+   
         var dataObject = { typeID: '001' };
         $.ajax({
             url: 'http://localhost:13131/api/MasterService/',
@@ -964,15 +968,16 @@
                     data = JSON.parse(data);
                     var html = '';
                     for (var i = 0; i < data.Table.length; i++) {
-                        html += '<tr class="clickable-row">';
+                        html += '<tr>';
                         html += '<td>' + data.Table[i].RowNum + '</td>';
-                        html += '<td class="hidecolumn">' + data.Table[i].CustID + '</td>';
+                        html += '<td class="hidecolumn">' + data.Table[i].ID + '</td>';
+                        html += '<td>' + data.Table[i].CustID + '</td>';
                         html += '<td>' + data.Table[i].Name + '</td>';
                         html += '<td>' + data.Table[i].Tel + '</td>';
                         html += '<td>' + data.Table[i].Contact + '</td>';
                         html += '</tr>';
                     }
-                    document.getElementById("tblCustomer").innerHTML = html;
+                    document.getElementById("customerBody").innerHTML = html;
 
                 },
                 error: function (msg) {
